@@ -1,2 +1,3 @@
 class Motorcycle < Vehicle
+  self.initial_state = :idling
 end
